# Todo_list

./: .env  alembic.ini  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2023_05_02-first.py
src/: config.py  database.py  models.py
src/auth/: database.py  jwt.py  manager.py  schemas.py  utils.py
